--- a/previous-work.html
+++ b/previous-work.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="header">
       <a href="daw-project.html" class="daw-container">DAW PROJECT</a>
-      <a href="vrodox.html" class="beats-container">BEATS</a>
+      <a href="index.html" class="beats-container">BEATS</a>
       <a href="previous-work.html" class="previous-work-container">PREVIOUS WORK</a>
       <a href="under-construction.html" class="cart-container">
         <img class="cart-icon" src="images/the-pixel-cart.png">
