--- a/under-construction.html
+++ b/under-construction.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;700&family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,600;9..40,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="construction.css">
-    <link rel="icon" type="image/x-icon" href="/images/Brian_faxicon.png">
+    <link rel="icon" type="image/x-icon" href="/images/Brian_faxicon.png?">
   </head>
   <body>
     <nav class="header">
