--- a/under-construction.html
+++ b/under-construction.html
@@ -22,7 +22,7 @@
 
     <section class="body-text">
       This page is under construction, sorry.
-      <a href="vrodox.html" class="go-back">Go back</a>
+      <a href="index.html" class="go-back">Go back</a>
     </section>
   </body>
 </html>
