--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
               <p class="big-question">Who am I?</p>
               <p class="description">        
                 Hello, my name is Ved Bhowmik, or you might have heard me from my producer alias name 
-                <a class="sample" target="_blank" href="https://www.youtube.com/@vrodoxbeats9255">@vrodox.beats</a>. I am a record producer, self-taught mixing engineer, and software enthusiast. Like every teenager during the quarantine, I too dwelled away at my desk listening to music, watching T.V., and putting up with online school. But, after too many days of listening to 
+                <a class="sample" target="_blank" href="https://www.youtube.com/@vrodoxbeats9255">@vrodox.beats</a>. I am a record producer, self-taught mixing engineer, and software enthusiast. Like every teenager during the quarantine, I too dwelled away at my desk listening to music, watching T.V., and putting up with online school. But after too many days of listening to 
                 <a>Kanye&#39;s discography</a> and an abundant amount of experimental, soulful, jazz rap records on my playlist, I too wanted to experience how it felt making a beat. I began 
-                <a class="sample" target="_blank" href="https://dean-davis.mykajabi.com/">learning Garageband</a> in 2020 and have gotten a lot better ever since. My first beat was an over distorted R&B sample topped with an off-beat drum pattern and no evident song structure. But, hey, everyone has to start somewhere, right? My sounds are constantly changing, but I work best with soulful Lo-fi melodies, rhythmic drum breaks, and a warm bassline. Feel free to check out my beats and reach out.
+                <a class="sample" target="_blank" href="https://dean-davis.mykajabi.com/">learning Garageband</a> in 2020 and have gotten a lot better ever since. My first beat was an over distorted R&B sample topped with an off-beat drum pattern and no evident song structure. But hey, everyone has to start somewhere, right? My sounds are constantly changing, but I work best with soulful Lo-fi melodies, rhythmic drum breaks, and a warm bassline. Feel free to check out my beats and reach out.
               </p>
             </div>
             <div class="baljeet-container">
