--- a/daw-project.html
+++ b/daw-project.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;700&family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,600;9..40,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="daw-project.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/daw-project.css">
     <link rel="shortcut icon" type="image/x-icon" href="Brian_faxicon.png">
   </head>
   <body>
@@ -38,5 +38,6 @@
       
 
     </section>
+    <script type="module" src="js-code/heading-cart.js"></script>
   </body>
 </html>
