--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;700&family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,600;9..40,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="for-everything.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="styles/for-everything.css">
+    <link rel="stylesheet" href="styles/header.css">
     <link rel="shortcut icon" type="image/x-icon" href="Brian_faxicon.png">
   </head>
   <body>
@@ -59,11 +59,12 @@
       <div class="beats-header">BEATS</div>
     </section>
     
-    <section class="search-and-music js-search-and-music">
+    <section class="search-and-music">
       <div class="search-bar">
         <img class="search-icon" src="images/searchicon_pixel.png">
-        <input class="search-box" type="text" placeholder="Search">
+        <input class="search-box" id="js-search-input" type="text" placeholder="Search name">
       </div>
+      <div class="js-search-and-music"></div>
       
     </section>
 
@@ -87,6 +88,7 @@
       </div>
     </footer>
 
-    <script type="module" src="add-products.js"></script>
+    <script type="module" src="js-code/add-products.js"></script>
+    <script type="module" src="js-code/heading-cart.js"></script>
   </body>
 </html>
