--- a/previous-work.html
+++ b/previous-work.html
@@ -4,12 +4,12 @@
     <title>Previous Work</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="previous.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/previous.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;700&family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,600;9..40,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="for-everything.css">
+    <link rel="stylesheet" href="styles/for-everything.css">
     <link rel="shortcut icon" type="image/x-icon" href="Brian_faxicon.png">
   </head>
   <body>
@@ -86,5 +86,6 @@
         </div>
       </div>
     </section>
+    <script type="module" src="js-code/heading-cart.js"></script>
   </body>
 </html>
