--- a/under-construction.html
+++ b/under-construction.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;700&family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,600;9..40,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="construction.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/construction.css">
+    <link rel="stylesheet" href="styles/for-everything.css">
     <link rel="shortcut icon" type="image/x-icon" href="Brian_faxicon.png">
   </head>
   <body>
@@ -21,10 +22,17 @@
         <p class="text-cart">CART</p>
       </a>
     </nav>
+    <div class="heading">
+      <p class="beat-count">Quantity ()</p>
+      <button class="buy-now">Buy Now</button>
+    </div>
+    <div class="js-cart-items"></div>
 
-    <section class="body-text">
+    <!--<section class="body-text">
       This page is under construction, sorry.
       <a href="index.html" class="go-back">Go back</a>
-    </section>
+    </section>-->
+    <script type="module" src="js-code/cart.js"></script>
+    <script type="module" src="js-code/heading-cart.js"></script>
   </body>
 </html>
